--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h2>Mac Jones</h2>
+		<h2>Mac Jones Gagua Soriano</h2>
 		<p>A Web Developer</p>
 		<p>New Feature 1 branch</p>
 	</body>
