--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 		<h2>Mac Jones Gagua Soriano</h2>
 		<p>A Web Developer</p>
 		<p>New Feature 1 branch</p>
+		<p>Added ti github</p>
 	</body>
 </html>
