added testing text paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 		<p>New Feature 1 branch</p>
 		<p>Added ti github</p>
 		<p>Should add Generate New Token</p>
+		<p>testing</p>
 	</body>
 </html>
