added section elements in index.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 		<title>Git Course</title>
 	</head>
 	<body>
-		<h2>Mac Jones Gagua Soriano</h2>
-		<p>A Web Developer</p>
-		<p>New Feature 1 branch</p>
-		<p>Added ti github</p>
-		<p>Should add Generate New Token</p>
-		<p>testing</p>
+		<main>
+			<section>
+				<h2>Mac Jones Gagua Soriano</h2>
+				<p>A Web Developer</p>
+				<p>New Feature 1 branch</p>
+				<p>Added ti github</p>
+				<p>Should add Generate New Token</p>
+				<p>testing</p>
+			</section>
+		</main>
 	</body>
 </html>
